wip: Initial version with spark connect